# egov

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  database.ini  init.sql  pyproject.toml
app/: config.py  crud.py  database.py  depends.py  main.py  models.py  permissions.py  repository.py  router.py  schema.py  utils.py
app/routers/: __init__.py  router_login.py
app/schemas/: user_schema.py
